@@ -4,10 +4,12 @@ import org.estrella.cocktail.api.dto.response.CocktailInfoResDto;
 import org.estrella.cocktail.api.dto.response.CocktailListResDto;
 import org.estrella.cocktail.domain.Cocktail;
 import org.estrella.cocktail.domain.CocktailRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,12 +22,18 @@ public class CocktailService {
         this.cocktailRepository = cocktailRepository;
     }
 
-    public CocktailListResDto cocktailFindAll() {
-        List<Cocktail> cocktails = cocktailRepository.findAll();
-        List<CocktailInfoResDto> cocktailInfoResDtoList = cocktails.stream()
+    public CocktailListResDto cocktailFindAll(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Cocktail> cocktailPage = cocktailRepository.findAll(pageable);
+        List<CocktailInfoResDto> cocktailInfoResDtoList = cocktailPage.stream()
                 .map(CocktailInfoResDto::from)
-                .toList();
-        return CocktailListResDto.from(cocktailInfoResDtoList);
+                .collect(Collectors.toList());
+        return CocktailListResDto.builder()
+                .cocktails(cocktailInfoResDtoList)
+                .currentPage(cocktailPage.getNumber())
+                .totalPages(cocktailPage.getTotalPages())
+                .totalItems(cocktailPage.getTotalElements())
+                .build();
     }
 
 
@@ -35,9 +43,10 @@ public class CocktailService {
         return CocktailInfoResDto.from(cocktail);
     }
 
-    public List<Integer> findCocktailIdsByName(String name) {
-        List<Cocktail> cocktails = cocktailRepository.findByKorNameContainingOrEngNameContaining(name);
-        return cocktails.stream()
+    public List<Integer> findCocktailIdsByName(String name, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Cocktail> cocktailPage = cocktailRepository.findByKorNameContainingOrEngNameContaining(name, pageable);
+        return cocktailPage.stream()
                 .map(Cocktail::getId)
                 .collect(Collectors.toList());
     }
